--- a/authentication-system-with-df-detection/package.json
+++ b/authentication-system-with-df-detection/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "api": "C:/Users/Aadil/anaconda3/envs/voice-auth-env/python -m uvicorn src.main:app --reload",
+    "start-all": "concurrently \"npm run dev\" \"npm run api\""
   },
   "dependencies": {
     "firebase": "^11.6.0",
@@ -20,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
