--- a/authentication-system-with-df-detection/package.json
+++ b/authentication-system-with-df-detection/package.json
@@ -7,15 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "api": "C:/Users/Aadil/anaconda3/envs/voice-auth-env/python -m uvicorn src.main:app --reload",
-    "start-all": "concurrently \"npm run dev\" \"npm run api\""
+    "api": "C:/Users/Aadil/anaconda3/envs/voice-auth-project-env/python -m uvicorn src.main:app --reload",
+    "start-all": "concurrently \"npm run dev\" \"npm run api\"",
+    "email": "email dev --dir src/app/emails"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.36",
     "firebase": "^11.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
+    "recorder-js": "^1.0.7",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
