--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.31.0",
     "firebase": "^11.6.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0"
   }
 }
